update unittest